configure shell script for creating installers